--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.15",
-    "expo-calendar": "~11.3.2",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-calendars": "^1.1302.0"
+    "expo": "~54.0.19",
+    "expo-calendar": "~15.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-calendars": "^1.1313.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.28.5",
+    "babel-preset-expo": "^54.0.6"
   },
   "private": true
 }
